首页，轮播图，数据展示，影院，列表展示，我的页面布局

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  http: any
+  url_launcher: any
+  flutter_swiper: any
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -34,6 +38,21 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - images/yindaoye.png
+    - images/jc.jpg
+    - images/wodeyuyue.png
+    - images/chongzhijilu.png
+    - images/group_2.png
+    - images/duihao.png
+    - images/yijianfankui_01.png
+    - images/invalid_name.png
+    - images/pinglun.png
+    - images/wodedianyingpiao.png
+    - images/back.png
+    - images/wuguanzhu.png
+    - images/beiying.jpg
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
